--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,19 @@
 [project]
 name = "pyiceberg-hdfs-native"
-version = "0.1.0"
-description = "Add your description here"
+dynamic = ["version"]
+description = "Provides a pyiceberg.io.FileIO implementation for hdfs-native client"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.9"
 dependencies = [
-    'hdfs-native',
-    "pyiceberg>=0.9.1",
+    "hdfs-native>=0.11",
+    "pyiceberg>=0.9",
 ]
 
 [build-system]
-requires = ["setuptools>=43.0.0", "wheel"]
+requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
 py-modules = ["pyiceberg_hdfs_native"]
+
+[tool.setuptools_scm]
